k8s/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veritrail-console
  namespace: veritrail
  labels:
    app: veritrail-console
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: veritrail-console
  template:
    metadata:
      labels:
        app: veritrail-console
        component: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      containers:
        - name: console
          image: veritrail/console:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '200m'
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
---
apiVersion: v1
kind: Service
metadata:
  name: veritrail-console
  namespace: veritrail
  labels:
    app: veritrail-console
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: veritrail-console
